[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player/Caminata (Spritesheet).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Sanctus.gd" type="Script" id=2]
[ext_resource path="res://SFX_Jump_09.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/Ataque (Spritesheet).png" type="Texture" id=4]
[ext_resource path="res://SoundEffects/Player/Armor hit.mp3" type="AudioStream" id=5]
[ext_resource path="res://SoundEffects/Player/Right foot.wav" type="AudioStream" id=6]
[ext_resource path="res://SoundEffects/SFX_Jump_01.wav" type="AudioStream" id=7]
[ext_resource path="res://SoundEffects/Sword Clang.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 137, 0, 137, 126 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 274, 0, 137, 126 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 126, 137, 126 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 137, 126, 137, 126 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 274, 126, 137, 126 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 252, 137, 126 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 137, 252, 137, 126 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 125, 114 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 125, 0, 125, 114 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 125, 114 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 114, 125, 114 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 125, 114, 125, 114 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 114, 125, 114 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 228, 125, 114 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 125, 228, 125, 114 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 228, 125, 114 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.01
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.5, 16 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 23, 19 )

[node name="Sanctus" type="KinematicBody2D"]
position = Vector2( 3, -4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7, 8 )
scale = Vector2( 0.474, 0.512 )
frames = SubResource( 15 )
animation = "Attack"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.5, 12 )
shape = SubResource( 16 )

[node name="Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="swordClang" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="sanctusSword" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sanctusSword"]
position = Vector2( 5, 11 )
shape = SubResource( 49 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
